syntax = "proto3";

package example;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/publiclabel/monorepo/orgs/examples/proto;example";

// ----------------------------------------------------------------------------
// Data Messages
// ----------------------------------------------------------------------------

message Person {
  string id = 1;
  string username = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

// ----------------------------------------------------------------------------
// Service Messages
// ----------------------------------------------------------------------------

message GetPersonsRequest {}

message GetPersonsResponse {
  repeated Person persons = 1;
  string next = 2;
  string prev = 3;
}

message CreatePersonRequest {
  string username = 1;
}

message GetPersonByIDRequest {
  string id = 1;
}

// ----------------------------------------------------------------------------
// Service
// ----------------------------------------------------------------------------

service Persons {
  rpc GetPersons(GetPersonsRequest) returns (GetPersonsResponse) {};
  rpc GetPersonByID(GetPersonByIDRequest) returns (Person) {};
  rpc CreatePerson(CreatePersonRequest) returns (Person) {};
}
